--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -16,3 +16,14 @@ h1, h2, h3, h4, h5, h6{
   margin: 0;
   padding: 0;
 }
+
+body{
+  background: image_url('what-the-hex.png');
+  /* Helvetica/Arial-based sans serif stack */
+  font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.navbar{
+  background: image_url('mosaic.png');
+  box-shadow: 0px 3px 5px #242424;
+}
