--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -27,3 +27,9 @@ body{
   background: image_url('mosaic.png');
   box-shadow: 0px 3px 5px #242424;
 }
+
+.navbar-inverse .navbar-brand{
+  color: #E85A5A;
+  font-family: 'chunkfiveroman', sans-serif;
+  font-size: 26px;
+}
