completed the pagination excersice. I used Kaminari and used the Bootstrap4 - twitter theme. I centered it and had the max to be 10 per page - lesson 12

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -5,3 +5,12 @@
     <p><%= place.description %></p><br />
   </div>
 <% end %>
+
+<br />
+<div class = "container pagination justify-content-center">
+  <%= paginate @places, theme: 'twitter-bootstrap-4', pagination_class: "pagination-sm" %>
+</div>
+
+<br />
+<br />
+<br />
