--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -74,3 +74,21 @@ blockquote p {
 .photos-title{
   text-align: center;
 }
+
+.picture-block{
+  width: 100%;
+  border-radius: 8px;
+  border: 1px solid #ddd;
+  padding: 5px;
+}
+
+.caption{
+  text-align: center;
+  padding: 10px 20px;
+  font-style: italic;
+  border-radius: 50px;
+  width: 50%;
+  margin-left: 25%;
+  margin-top: 5px;
+  background-color: rgba(50, 115, 220, 0.3);
+}
