--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -33,21 +33,19 @@
 
   <div class = "float-right">
     <% if current_user && current_user == @place.user %>
+      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+        Add a Photo
+      </button>
       <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
-         <%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'}, class: 'btn btn-danger' %>
+          <%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'}, class: 'btn btn-danger' %>
    <% end %>
   </div>
 </div>
 
 <div class = "clear"></div>
 
+
 <!-- Photos -->
-
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-  Add a Photo
-</button>
-
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
@@ -74,6 +72,8 @@
 
 <div class = "clear"></div>
 
+
+<!-- Comments -->
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
