--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -46,8 +46,16 @@
 
 
 <!-- Photos -->
+
+<%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
+          <%= f.input :caption %>
+          <%= f.input :picture %>
+                    <%= f.submit "Add a Photo", class: 'btn btn-primary' %>
+      <% end %>
+
+
 <!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<!-- <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -68,7 +76,7 @@
       <% end %>
     </div>
   </div>
-</div>
+</div> -->
 
 <div class = "clear"></div>
 
