reverted back to the modal

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -44,18 +44,17 @@
 
 <div class = "clear"></div>
 
-
-<!-- Photos -->
-
 <%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
           <%= f.input :caption %>
           <%= f.input :picture %>
                     <%= f.submit "Add a Photo", class: 'btn btn-primary' %>
-      <% end %>
+                          <% end %>
 
 
+
+<!-- Photos -->
 <!-- Modal -->
-<!-- <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -76,7 +75,7 @@
       <% end %>
     </div>
   </div>
-</div> -->
+</div>
 
 <div class = "clear"></div>
 
