--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -78,17 +78,21 @@ blockquote p {
 .picture-block{
   width: 100%;
   border-radius: 8px;
-  border: 1px solid #ddd;
+  border-style: double;
   padding: 5px;
 }
 
 .caption{
   text-align: center;
-  padding: 10px 20px;
   font-style: italic;
-  border-radius: 50px;
+  font-variant: small-caps;
+  font-weight: bold;
+  
+  padding: 10px 20px;
+  border-bottom: 6px solid yellow;
   width: 50%;
   margin-left: 25%;
   margin-top: 5px;
-  background-color: rgba(50, 115, 220, 0.3);
+  background-color: rgba(76, 80, 175, 0.2);
+  margin-bottom: 20px;
 }
