--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -27,6 +27,7 @@ body{
 .navbar{
   background: image_url('mosaic.png');
   box-shadow: 0px 3px 5px #242424;
+  margin-bottom: 0;
 }
 
 .navbar-inverse .navbar-brand{
@@ -95,4 +96,30 @@ blockquote p {
   margin-top: 5px;
   background-color: rgba(76, 80, 175, 0.2);
   margin-bottom: 20px;
+}
+
+.carousel-inner > .carousel-item > img, .carousel-inner > .carousel-item > a > img {
+  max-height: 550px;
+  width: 100%;
+}
+
+.carousel-item.active, 
+.carousel-item-next, 
+.carousel-item-prev {
+  display: block;
+}
+
+.carousel-caption{
+  font-family: 'Helvetica Neue', Helvetica, sans-serif;
+  font-size: 60px;
+  font-weight: 100;
+  text-shadow: rgba(0, 0, 0, 0.95) 2px 2px;
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  position: absolute;
+  left: 0;
+}
+
+.carousel{
+  box-shadow: 0px 3px 8px #2a2a2a;
 }
