--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -7,25 +7,25 @@
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
-      <%= image_tag 'slider1.jpg', class: 'd-block img-fluid' %>
+      <%= image_tag 'slider1.jpg', class: 'img-fluid' %>
       <div class = "carousel-caption d-none d-md-block">
         <h3>Find the best pizza places</h3>
       </div>
     </div>
     <div class="carousel-item">
-      <%= image_tag 'slider2.jpg', class: 'd-block img-fluid' %>
+      <%= image_tag 'slider2.jpg', class: 'img-fluid' %>
       <div class = "carousel-caption d-none d-md-block">
         <h3>How about burgers?</h3>
       </div>
     </div>
     <div class="carousel-item">
-      <%= image_tag 'slider3.jpg', class: 'd-block img-fluid' %>
+      <%= image_tag 'slider3.jpg', class: 'img-fluid' %>
       <div class = "carousel-caption d-none d-md-block">
         <h3>Find the tastiest salad</h3>
       </div>
     </div>
     <div class="carousel-item">
-      <%= image_tag 'slider4.jpg', class: 'd-block img-fluid' %>
+      <%= image_tag 'slider4.jpg', class: 'img-fluid' %>
       <div class = "carousel-caption d-none d-md-block">
         <h3>Locate your new favorite sushi place</h3>
       </div>
