fixed the salad picture on the carousel on the index page to have the right dimensions

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -41,6 +41,17 @@
   </a>
 </div>
 
+<br />
+
+<% form_tag places_path do %>
+  <p>
+    <%= text_field_tag :search %>
+    <%= submit_tag "Search" %>
+  </p>
+<% end %>
+
+<br />
+
 <% @places.each do |place| %>
   <div class = "booyah-box col-10 offset-1">
     <h1><%= link_to place.name, place_path(place) %></h1><br />
