--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -41,16 +41,13 @@
   </a>
 </div>
 
-<br />
+<!-- <br />
 
-<% form_tag places_path do %>
-  <p>
-    <%= text_field_tag :search %>
-    <%= submit_tag "Search" %>
-  </p>
-<% end %>
-
-<br />
+<!-- <h3>Search for a Place:</h4>
+  <%= form_tag places_path, :method => 'get' do %>
+    <%= text_field_tag :search, params[:search] %>
+    <%= submit_tag "Search", :name => nil %>
+  <% end %> -->
 
 <% @places.each do |place| %>
   <div class = "booyah-box col-10 offset-1">
